<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExerciseBuddy</string>
    <string name="edit_message"> Enter a message</string>
    <string name="text1"> Activity:</string>
    <string name="text2"> Day:</string>
    <string name="text3"> Start:</string>
    <string name="text4"> End:</string>
    <string name="update"> Update</string>
    <string name="delete"> Delete</string>
    <string name="midnight">12:00AM</string>
    <string name="dayOver">11:59PM</string>
    <string name="Notes">Notes</string>
    <string name="button_send"> Add Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main"> MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_week">My Week</string>
    <string name="select_Activity">Select Activity</string>
    <string name="view_activity">View Activity</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="select_day">Select Day</string>
    <string name="select_start">Start Time</string>
    <string name="select_end">End Time</string>
    <string name="time">HH:MM:SS</string>
    <string name="title_activity_display_other">Enter a Daily Activity</string>
    <string name="SleepScreen">Please enter your sleep pattern for each day of the week.</string>
    <string name="title_activity_update">Edit Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sleep">Create a New Account</string>
    <string name="title_activity_login">Login</string>

</resources>
