<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.carlos.exercisebuddy.UpdateActivity">

    <TextView android:text="@string/select_Activity" android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ActivityName"
        android:layout_below="@+id/textView"
        android:spinnerMode="dropdown"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:text="@string/select_day"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/ActivityName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ActivityName"
        android:layout_alignEnd="@+id/ActivityName" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/dayOfWeek"
        android:layout_below="@+id/textView2"
        android:spinnerMode="dropdown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/select_start"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/dayOfWeek"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dayOfWeek"
        android:layout_alignEnd="@+id/dayOfWeek" />

    <TextView
        android:text="@string/select_end"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/startTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/update"
        android:layout_toStartOf="@+id/update" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/startTime"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:hint="@string/time" />

    <EditText
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/endTime"
        android:hint="@string/time"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/update" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/update"
        android:onClick="UpdateActivity"
        android:layout_below="@+id/endTime"
        android:layout_toRightOf="@+id/startTime"
        android:layout_toEndOf="@+id/startTime"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_activity"
        android:id="@+id/viewButton"
        android:layout_alignBottom="@+id/update"
        android:layout_toRightOf="@+id/update"
        android:layout_toEndOf="@+id/update"
        android:onClick="ViewActivity" />

    <Spinner
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/amOrpm"
        android:layout_below="@+id/textView3"
        android:spinnerMode="dropdown"
        android:layout_toRightOf="@+id/startTime"
        android:layout_alignBottom="@+id/startTime"
        android:layout_toStartOf="@+id/viewButton"
        android:layout_toLeftOf="@+id/viewButton" />

    <Spinner
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/amOrpm2"
        android:spinnerMode="dropdown"
        android:layout_toRightOf="@+id/startTime"
        android:layout_alignTop="@+id/endTime"
        android:layout_toStartOf="@+id/viewButton"
        android:layout_toLeftOf="@+id/viewButton"
        android:layout_above="@+id/update" />
</RelativeLayout>
