<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.carlos.exercisebuddy.AddActivity">

    <TextView android:text="@string/select_Activity" android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewActivity" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/ActivityName"
        android:layout_below="@+id/textViewActivity"
        android:spinnerMode="dropdown"
        android:layout_alignRight="@+id/textViewActivity"
        android:layout_alignEnd="@+id/textViewActivity" />

    <TextView
        android:text="@string/select_day"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDay"
        android:layout_below="@+id/ActivityName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ActivityName"
        android:layout_alignEnd="@+id/ActivityName" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/dayOfWeek"
        android:layout_below="@+id/textViewDay"
        android:spinnerMode="dropdown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/select_start"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStart"
        android:layout_below="@+id/dayOfWeek"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/select_end"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/textViewEnd"
        android:layout_above="@+id/timePickerEnd"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:id="@+id/button2"
        android:onClick="AddActivity"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/dayOfWeek"
        android:layout_toEndOf="@+id/dayOfWeek" />

    <TimePicker
        android:id="@+id/timePickerEnd"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:timePickerMode="spinner"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />

    <TimePicker
        android:id="@+id/timePickerStart"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:timePickerMode="spinner"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewStart"
        android:importantForAccessibility="yes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Notes"
        android:id="@+id/tvNotes"
        android:layout_toRightOf="@+id/ActivityName"
        android:layout_toEndOf="@+id/ActivityName"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/ActivityName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Notes"
        android:layout_below="@+id/tvNotes"
        android:layout_alignLeft="@+id/tvNotes"
        android:layout_alignStart="@+id/tvNotes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Enter information about your activity" />

</RelativeLayout>
